[project]
name = "file-storage"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.11",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "zstandard>=0.23.0",
]

[dependency-groups]
lint = [
    "ruff>=0.11.0",
]

[tool.uv.sources]
zstandard = { git = "https://github.com/befeleme/python-zstandard.git", rev = "bytestring" }
