[project]
name = "toshiba-content-delivery-server"
version = "1.0.2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.11",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
    "zstandard>=0.23.0",
]

[dependency-groups]
lint = [
    "pyright>=1.1.397",
    "ruff>=0.11.0",
]
